--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'reveal.js/dist/reveal.css';
+
+// Some global styles for the presentation
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden;
+}
+
+app-presentation {
+    display: block;
+    height: 100vh;
+}
+
+.reveal {
+    height: 100%;
+}
