--- a/src/app/topics/signals/signals.component.html
+++ b/src/app/topics/signals/signals.component.html
@@ -1,1 +1,5 @@
-<p>signals works!</p>
+<section>
+    <app-code-example path="signals/computed-signal">
+        <app-computed-signal />
+    </app-code-example>
+</section>
