--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'reveal.js/dist/reveal.css';
+// Full list of highlight themes: https://highlightjs.org/demo
+@import 'highlight.js/styles/atom-one-dark-reasonable.css';
 
 // Some global styles for the presentation
 body {
