Fix links and README

--- a/src/app/topics/start/start.component.html
+++ b/src/app/topics/start/start.component.html
@@ -1,6 +1,6 @@
 <h1 class="r-fit-text">Everything you need to know about Angular</h1>
 <h3 class="">and everthing you don't...</h3>
 <p class="r-fit-text">
-    <small>Find slides and code on <a href="https://github.com/jagantoe"
-            target="_blank">https://github.com/jagantoe</a></small>
+    <small>Find slides and code on <a href="https://github.com/jagantoe/AngularPresentation"
+            target="_blank">https://github.com/jagantoe/AngularPresentation</a></small>
 </p>
