--- a/src/app/topics/basics/basics.component.html
+++ b/src/app/topics/basics/basics.component.html
@@ -2,7 +2,7 @@
     <a href="https://angular.dev/guide/components/lifecycle#during-initialization" target="_blank">
         <h2>Lifecycle Hooks - Initialization</h2>
     </a>
-    <img data-preview-image style="width: 50%;" src="/lifecycle-hooks-initialization.png"
+    <img data-preview-image style="width: 50%;" src="./lifecycle-hooks-initialization.png"
         alt="Lifecycle Hooks Diagram" />
 </section>
 
@@ -10,7 +10,7 @@
     <a href="https://angular.dev/guide/components/lifecycle#during-initialization" target="_blank">
         <h2>Lifecycle Hooks - Updates</h2>
     </a>
-    <img data-preview-image style="width: 50%;" src="/lifecycle-hooks-updates.png" alt="Lifecycle Hooks Diagram" />
+    <img data-preview-image style="width: 50%;" src="./lifecycle-hooks-updates.png" alt="Lifecycle Hooks Diagram" />
 </section>
 
 <section>
